# certbot-dns-git

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
src/certbot_dns_git/: __init__.py
src/certbot_dns_git/_internal/: dns_git.py
src/certbot_dns_git/_internal/tests/: dns_git_test.py
