[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "certbot-dns-git"
version = "0.1.0"
description = "Git repository-based DNS authenticator plugin for Certbot"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Christophe Kyvrakidis"}]
keywords = ["certbot", "dns", "git", "acme", "ssl", "tls", "letsencrypt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "certbot>=2.0.0",
    "dulwich>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/certmate/certbot-dns-git"

[project.entry-points."certbot.plugins"]
dns-git = "certbot_dns_git._internal.dns_git:Authenticator"

[tool.setuptools.packages.find]
where = ["src"]
